<resources>
    <string name="app_name">LocationTracer</string>
    <string name="name">LocationTracker</string>
    <string name="loginText">Login:</string>
    <string name="passwordText">Password:</string>
    <string name="loginTextField">Your login</string>
    <string name="buttonLogIn">Log in</string>
    <string name="buttonRegister">Create an account!</string>
    <string name="createLoginText">Please input your login:</string>
    <string name="createPassword">Please input your password:</string>
    <string name="buttonSignUp">Sign up</string>
    <string name="backToLoginText">Already have an account? Sign in.</string>
</resources>